gcc/testsuite/gcc.dg/sizeof-2.c
/* { dg-do compile } */


void foo()
{
  sizeof(,); /* { dg-error "expected expression before" } */
}

